# movie-poster-storage

./: download_movie_posters.py  gen_halls.py  gen_movies.py  gen_screenings.py  language_ids.json  movie_ids.json  movies.json  movies_bak.json  test.js  theatre_halls_ids.json  theatre_ids.json
benchmark/: Cargo.toml
benchmark/src/: main.rs
gen_screenings/: Cargo.toml
gen_screenings/src/: main.rs
theatres/: theatres(1).sql  theatres(10).sql  theatres(11).sql  theatres(12).sql  theatres(2).sql  theatres(3).sql  theatres(4).sql  theatres(5).sql  theatres(6).sql  theatres(7).sql  theatres(8).sql  theatres(9).sql  theatres.sql (1)
