[package]
name = "benchmark"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.26", features = ["serde"] }
rayon = "1.7.0"
reqwest = { version = "0.11.18", features = ["blocking"] }
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.99"
uuid = { version = "1.4.0", features = ["serde"] }
